force-app/main/default/objects/FinancialCharge__c/FinancialCharge__c.object-meta.xml
<CustomObject>
    <label>Charge financière</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charges financières</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>