force-app/main/default/objects/FinancialCharge__c/fields/childAmount__c.field-meta.xml
<CustomField>
    <fullName>childAmount__c</fullName>
    <label>Charges enfant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>