force-app/main/default/objects/FinancialCharge__c/fields/collaborator__c.field-meta.xml
<CustomField>
    <fullName>collaborator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaborateur</label>
    <referenceTo>Collaborator__c</referenceTo>
    <relationshipLabel>Charges financières</relationshipLabel>
    <relationshipName>FinancialCharges</relationshipName>
    <type>Lookup</type>
</CustomField>