force-app/main/default/objects/FinancialCharge__c/fields/financialChargeChildCount__c.field-meta.xml
<CustomField>
    <fullName>financialChargeChildCount__c</fullName>
    <label>[#] Nombre de charges financières enfant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>