force-app/main/default/objects/FinancialCharge__c/fields/isLocked__c.field-meta.xml
<CustomField>
    <fullName>isLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Une charge verrouillée a été alimentée par un système externe et ne peut donc pas être modifiée/supprimée manuellement</description>
    <label>Verrouillée</label>
    <type>Checkbox</type>
</CustomField>