force-app/main/default/objects/FinancialCharge__c/fields/orderItem__c.field-meta.xml
<CustomField>
    <fullName>orderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne de commande</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OrderItem.Order.Id</field>
            <operation>equals</operation>
            <valueField>$Source.order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Charges financières</relationshipLabel>
    <relationshipName>FinancialCharges</relationshipName>
    <type>Lookup</type>
</CustomField>