force-app/main/default/objects/FinancialCharge__c/fields/parentCharge__c.field-meta.xml
<CustomField>
    <fullName>parentCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge parent</label>
    <referenceTo>FinancialCharge__c</referenceTo>
    <relationshipLabel>Charges financières</relationshipLabel>
    <relationshipName>childCharges</relationshipName>
    <type>Lookup</type>
</CustomField>