force-app/main/default/objects/FinancialCharge__c/fields/reason__c.field-meta.xml
<CustomField>
    <fullName>reason__c</fullName>
    <label>Motif</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Communication et marketing</fullName>
            </value>
            <value>
                <fullName>Fixe</fullName>
                <label>Fixe (Salaire)</label>
            </value>
            <value>
                <fullName>Loyer</fullName>
            </value>
            <value>
                <fullName>Prestation</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Produits et accessoires</fullName>
            </value>
            <value>
                <fullName>Salaire</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
                <label>Variable (Salaire)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>