force-app/main/default/objects/FinancialCharge__c/fields/totalAmount__c.field-meta.xml
<CustomField>
    <fullName>totalAmount__c</fullName>
    <formula>amount__c + childAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>