force-app/main/default/objects/FinancialCharge__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Annulation</fullName>
            </value>
            <value>
                <fullName>Régularisation</fullName>
            </value>
            <value>
                <fullName>Rémunération</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>