force-app/main/default/objects/FinancialCharge__c/validationRules/VR_K3_FinancialCharge_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_FinancialCharge_Locked</fullName>
    <active>true</active>
    <description>Impossible de modifier/créer un actif si la charge est verrouillée</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
isLocked__c = true &amp;&amp;
NOT(ISNEW()) &amp;&amp;
NOT(ISCHANGED(isLocked__c))</errorConditionFormula>
    <errorMessage>Impossible de modifier une charge verrouillée!</errorMessage>
</ValidationRule>