force-app/main/default/objects/FinancialCharge__c/validationRules/VR_K3_FinancialCharge_RequiredCollab.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_FinancialCharge_RequiredCollab</fullName>
    <active>true</active>
    <description>Le champ &quot;Collaborateur&quot; si le motif d&apos;une charge de travail est soit:
- Salaire
- Prime
- Fixe (Salaire)
- Variable (Salaire)
- Prestation</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISBLANK(collaborator__c) &amp;&amp;
(
ISPICKVAL(reason__c , &quot;Salaire&quot;) || ISPICKVAL(reason__c , &quot;Prime&quot;) || 
ISPICKVAL(reason__c , &quot;Fixe&quot;) || ISPICKVAL(reason__c , &quot;Variable&quot;)
|| ISPICKVAL(reason__c , &quot;Prestation&quot;)
)</errorConditionFormula>
    <errorDisplayField>collaborator__c</errorDisplayField>
    <errorMessage>Collaborateur obligatoire!</errorMessage>
</ValidationRule>