force-app/main/default/objects/FinancialCharge__c/validationRules/VR_K3_FinancialCharge_RequiredOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_FinancialCharge_RequiredOrder</fullName>
    <active>true</active>
    <description>Le champ &quot;Commande&quot; est obligatoire si le motif &quot;Variable (Salaire)&quot; ou si une ligne est renseignée</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
ISBLANK(order__c) &amp;&amp;
( ISPICKVAL(reason__c , &quot;Variable&quot;) || NOT(ISBLANK(orderItem__c)) )</errorConditionFormula>
    <errorDisplayField>order__c</errorDisplayField>
    <errorMessage>Commande obligatoire!</errorMessage>
</ValidationRule>