force-app/main/default/objects/FinancialCharge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>collaborator__c</columns>
    <columns>order__c</columns>
    <columns>orderItem__c</columns>
    <columns>entity__c</columns>
    <columns>amount__c</columns>
    <columns>type__c</columns>
    <columns>reason__c</columns>
    <columns>parentCharge__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>